Added integration tests run in Docker